--- a/recap/Cargo.toml
+++ b/recap/Cargo.toml
@@ -26,3 +26,6 @@ serde = { version = "1.0", features = ["derive"] }
 [features]
 default = ["derive"]
 derive = ["recap-derive"]
+
+[dev-dependencies]
+serde_json = "1.0"
